Add models to head generator * Add "resize" model * Adds 3 plushie models